# deciphon-api

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  MANIFEST.in  Pipfile  README.md  TODO.txt  build_ext.py  build_ext_deps  coordinates.py  dbs.sh  get_job.sh  gff.sh  install-deps  job_status.sh  pyproject.toml  run.py  setup.cfg  setup.py  submit_db.sh  submit_job.sh  truncate.sh
.github/workflows/: build_sdist.yml  build_wheels.yml  test.yml
deciphon_api/: __init__.py  _app.py  _name.py  _types.py  align.py  align_prod.py  alignment.py  any_path.py  app.py  auth.py  blob.py  blob.sha256  broker.py  bufsize.py  cache_dir.py  config.py  console.py  coord_painter.py  coord_path.py  coordinates.py  create_fasta.py  create_products.py  create_snap.py  data.py  db.py  depo.py  errors.py  examples.py  exception.py  exceptions.py  filehash.py  filename.py  gff.py  h3result-mac  hmm_path.py  hmmer_domains.py  hmmer_path.py  hmmer_result.py  httpget.py  httpget_dbs.py  (+52 more)
deciphon_api/api/: api.py  authentication.py  dbs.py  dbs_priv.py  dbs_pub.py  files.py  hmms.py  hmms_priv.py  hmms_pub.py  httpdelete.py  httpget.py  httpget_dbs.py  httpget_dbs_xxx.py  httpget_dbs_xxx_download.py  httpget_jobs_next_pend.py  httpget_jobs_xxx.py  httpget_jobs_xxx_prods.py  httpget_jobs_xxx_prods_fasta_yyy.py  httpget_jobs_xxx_prods_gff.py  httpget_jobs_xxx_seqs.py  httpget_jobs_xxx_seqs_next_yyy.py  httpget_prods_upload_example.py  httpget_prods_xxx.py  httpget_seqs_xxx.py  httppatch_jobs_xxx.py  httppost_dbs.py  httppost_jobs.py  httppost_prods_upload.py  httppost_testing_data.py  id.py  jobs.py  jobs_priv.py  jobs_pub.py  prod_streams.py  prods.py  responses.py  scans.py  scans_priv.py  scans_pub.py  sched.py  (+4 more)
deciphon_api/core/: config.py  errors.py  events.py  logging.py  scheduler.py  settings.py
deciphon_api/core/settings/: app.py  base.py  development.py  production.py  test.py
deciphon_api/models/: __init__.py  db.py  h3r.py  hmm.py  job.py  prod.py  scan.py  sched_health.py  schema.py  seq.py  snap.py
deciphon_api/sched/: db.py  error.py  hmm.py  interface.h  job.py  prod.py  rc.py  scan.py  sched.py  seq.py
deciphon_api/test/: test_dbs.py  test_jobs.py  test_prods.py  test_root.py
tests/: conftest.py  test_dbs.py  test_hmms.py  test_jobs.py  test_logging.py  test_prods.py  test_root.py  test_scans.py  test_version.py  upload.py
tools/: build_ext_deps  merge_headers  update_sched_interface
