[tool.poetry]
name = "deciphon-api"
version = "0.1.0"
description = "RESTful API for Deciphon scheduler"

license = "MIT"

authors = ["Danilo Horta <danilo.horta@pm.me>"]

readme = "README.md"

repository = "https://github.com/EBI-Metagenomics/deciphon-api"
homepage = "https://github.com/EBI-Metagenomics/deciphon-api"

keywords = ["deciphon", "api"]

classifiers = ["License :: OSI Approved :: MIT License"]

[tool.poetry.dependencies]
bcbio-gff = "*"
biopython = "*"
build = "*"
cffi = "*"
fastapi = "*"
loguru = "*"
pooch = "*"
pydantic = { extras = ["dotenv"], version = "*" }
python = "^3.9"
python-multipart = "*"
toml = "^0.9"
uvicorn = "*"
xxhash = "*"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
pyright = "*"
pytest = "*"
requests = "*"

[build-system]
requires = ["poetry_core>=1.0.0", "cffi"]
build-backend = "poetry.core.masonry.api"
