[metadata]
author = Danilo Horta
author_email = danilo.horta@pm.me
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
name = deciphon_api
license = MIT
license_files = LICENSE
platforms = MacOS, Linux
description = RESTful API for Deciphon scheduler
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EBI-Metagenomics/deciphon-api
version = attr: deciphon_api.__version__

[options]
packages = find:
